<resources>
    <string name="app_name">StockAlert - NSE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add Scrip</string>
    <string name="addstockdialog_label">Enter the Company name or code</string>
    <string name="dayHighLow">Day\'s High/Low</string>
    <string name="yearHighLow">52 Week High/Low</string>
    <string name="currentPrice">Current Price</string>
    <string name="traded_volume">Shares Traded</string>
    <string name="open_price">Open</string>
</resources>